--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.asocframework</groupId>
-    <artifactId>asoc-api</artifactId>
+    <artifactId>asoc-spi</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
