--- a/biz/asoc-spi-biz/pom.xml
+++ b/biz/asoc-spi-biz/pom.xml
@@ -19,5 +19,15 @@
             <artifactId>asoc-spi-model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.asocframework.asoc-spi</groupId>
+            <artifactId>asoc-spi-facade</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.asocframework.asoc-spi</groupId>
+            <artifactId>asoc-spi-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
