--- a/tools/asoc-spi-common/pom.xml
+++ b/tools/asoc-spi-common/pom.xml
@@ -13,5 +13,17 @@
     <groupId>org.asocframework.asoc-spi</groupId>
     <artifactId>asoc-spi-common</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.asocframework.asoc-spi</groupId>
+            <artifactId>asoc-spi-facade</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.asocframework.asoc-spi</groupId>
+            <artifactId>asoc-spi-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
