--- a/dal/asoc-spi-dal/pom.xml
+++ b/dal/asoc-spi-dal/pom.xml
@@ -12,6 +12,13 @@
 
     <groupId>org.asocframework.asoc-spi</groupId>
     <artifactId>asoc-spi-dal</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>org.asocframework.asoc-spi</groupId>
+            <artifactId>asoc-spi-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
