--- a/model/asoc-spi-model/pom.xml
+++ b/model/asoc-spi-model/pom.xml
@@ -13,5 +13,12 @@
     <groupId>org.asocframework.asoc-spi</groupId>
     <artifactId>asoc-spi-model</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.asocframework.asoc-spi</groupId>
+            <artifactId>asoc-spi-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
